<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorldCarQuiz</string>
    <string name="world_quiz">World Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="cars">Cars</string>
    <string name="play">Play</string>
    <string name="worlds">Worlds</string>
    <string name="tutorial">Tutorial</string>
    <string name="next_car">Next Car</string>
    <string name="prev_car">Prev Car</string>
    <string name="stats">Stats</string>
    <string name="awards">Awards</string>
    <string name="stamps">Stamps</string>
    <string name="div">3</string>

    <string name="america_subworld">America</string>
    <string name="europe_subworld">Europe</string>
    <string name="asia_subworld">Asia</string>
    <string name="all_subworld">All</string>
    <string name="garage">Garage</string>
    <string name="year">Year</string>
    <string name="segment">Segment</string>
    <string name="brand">Brand</string>
    <string name="random">Random Sticker Car</string>
    <string name="random_car">Ford Focus 2014</string>
    <string name="read">Read more...</string>
</resources>
