<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shapes"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.worldcarquiz.activity.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/world_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/world_quiz"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:fontFamily="Roboto"         
             />
        
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/cars"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/cars"
	            android:textColor="#ffffff"
	            android:textSize="15sp"
	            android:fontFamily="Roboto"         
	             />
	        
         </LinearLayout>
        <Button 
            android:id="@+id/play_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/play"
            android:textColor="#ffffff"
            android:fontFamily="Roboto" 
            />
        <Button 
            android:id="@+id/worlds_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/worlds"
            android:textColor="#ffffff"
            android:fontFamily="Roboto" 
            />
        <Button 
            android:id="@+id/tutorial_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/tutorial"
            android:textColor="#ffffff"
            android:fontFamily="Roboto" 
            />

    </LinearLayout>

</RelativeLayout>
