<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout 
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/brand_garage_button"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:background="@drawable/button_selector"
            android:layout_marginLeft="5dp"
            android:text="@string/brand"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/year_garage_button"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/brand_garage_button"
            android:background="@drawable/button_selector"
            android:text="@string/year"
            android:textSize="20sp" 
            android:textColor="#ffffff" />
    </RelativeLayout>
     <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:layout_below="@id/relativeLayout1"
        android:gravity="center_horizontal"
        android:layout_marginTop="1dp" >

        <Button
            android:id="@+id/segment_garage_button"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/segment"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/all_garage_button"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/segment_garage_button"
            android:background="@drawable/button_selector"
            android:text="@string/all_subworld"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>